# protolith-db

./: .gitignore  Cargo.toml  Dockerfile  README.md  sessions
api/protolith/annotation/v1/: annotation.proto
api/protolith/core/v1/: collection.proto  db.proto  field.proto
api/protolith/metastore/v1/: index.proto  schema.proto
api/protolith/services/v1/: admin.proto  auth.proto  engine.proto
api/protolith/test/v1/: test.proto
api/protolith/types/v1/: api.proto  op.proto
protolith-db/: Cargo.toml  build.rs
protolith-db/src/: main.rs  setup.bat  setup.sh
protolith/admin/: Cargo.toml
protolith/admin/src/: client.rs  lib.rs  service.rs
protolith/api/: Cargo.toml  build.rs
protolith/api/src/: lib.rs
protolith/app/: Cargo.toml  build.rs
protolith/app/src/: build_info.rs  env.rs  layer.rs  lib.rs  signals.rs
protolith/auth/: Cargo.toml
protolith/auth/src/: client.rs  lib.rs  service.rs
protolith/client/: Cargo.toml
protolith/client/src/: lib.rs
protolith/core/: Cargo.toml
protolith/core/src/: db.rs  lib.rs  meta_store.rs  schema.rs
protolith/engine/: Cargo.toml
protolith/engine/src/: client.rs  error.rs  lib.rs  service.rs
protolith/error/: Cargo.toml
protolith/error/src/: lib.rs  recover.rs
protolith/macros/: Cargo.toml
protolith/macros/src/: lib.rs
protolith/tracing/: Cargo.toml
protolith/tracing/src/: access_log.rs  level.rs  lib.rs  stream.rs  uptime.rs
