[package]
name = "protolith-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protolith-app = {path = "../protolith/app"}
protolith-core = {path = "../protolith/core"}
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
protolith-macros = { path = "../protolith/macros" }
bincode = "1.3.3"
serde_json = "1.0.111"
