[package]
name = "protolith-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protolith-core = { path = "../core"}
protolith-engine = { path = "../engine"}
protolith-api = { path = "../api"}
protolith-error = { path = "../error"}
thiserror = "1.0.56"
tonic = "0.10.2"
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
tower = { version = "0.4.13", features = ["full"] }
serde = "1.0.195"
