[package]
name = "protolith-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protolith-core = { path = "../core" }
protolith-admin ={ path = "../admin" }
tonic = "0.10.2"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
protolith-engine = {path = "../engine"}
protolith-macros = {path = "../macros"}
protolith-auth = {path = "../auth"}
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
