[package]
name = "protolith-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protolith-api = {path = "../api"}
protolith-tracing = {path = "../tracing"}
protolith-error = {path = "../error"}
rocksdb = "0.21.0"
tracing = "0.1.40"
thiserror = "1.0.56"
chrono = "0.4.31"
prost-reflect = "0.12.0"
serde = "1.0.195"
serde_json = "1.0.111"
