[package]
name = "protolith-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.21.0"
protolith-core = {path = "../core"}
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
thiserror = "1.0.56"
bytes = "1.5.0"
tonic = "0.10.2"
tower = { version = "0.4.13", features = ["full"] }
serde = "1.0.195"
