[package]
name = "protolith-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0.48"
serde = { version = "1.0.195", features = ["derive"] }
protolith-core = { path = "../core" }
bincode = "1.3.3"
serde_json = "1.0.111"
[lib]
proc-macro = true
